--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,11 +29,10 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    // box-shadow: -5px 3px 1px rgb(95, 92, 92);
     border-radius: 50%;
-    width: 370px;
-    height: 370px;
-    background-color: rgb(0, 0, 0);
+    box-shadow: inset 2px 3px 8px 2px rgba(0, 0, 0, .3);
+    width: 375px;
+    height: 375px;
     z-index: -99999;
     @media(max-width: 415px){
         max-width: 42vh;
@@ -167,7 +166,7 @@ body{
         transform-origin: 50% 100%;
         border-radius: 30% 30% 0 0;
         transform: rotate(0deg);
-        transition: 1s linear;      
+        transition:  0.2s cubic-bezier(.4,2.08,.55,.44);      
         z-index: 3;
     }
     .minute{
@@ -179,7 +178,7 @@ body{
         height: 30%;
         transform-origin: 50% 100%;
         transform: rotate(0deg);
-        transition: 1s linear;
+        transition:  0.2s cubic-bezier(.4,2.08,.55,.44);      
         border-radius: 30% 30% 0 0;
         z-index: 1;
     }
@@ -193,7 +192,7 @@ body{
         transform-origin: 50% 100%;
         border-radius: 30% 30% 0 0;
         transform: rotate(0deg);
-        transition: 1s linear;   
+        transition: 0.2s cubic-bezier(.4,2.08,.55,.44);      
         z-index: 2;
     }
 }
