--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Lato', sans-serif;
-    background-color: rgb(250, 250, 250);
+    // background-color: rgb(33, 33, 33);
 }
 .clockContainer{
     position: relative;
@@ -31,6 +31,7 @@ body{
     transform: translate(-50%,-50%);
     border-radius: 50%;
     box-shadow: inset 2px 3px 8px 2px rgba(0, 0, 0, .3);
+    background: white;
     width: 375px;
     height: 375px;
     z-index: -99999;
@@ -61,6 +62,7 @@ body{
         border-radius: 5px;
         .digital{
             font-size: 19px;
+            color: rgb(70, 69, 69);
         }
     }
     .logo{
@@ -68,6 +70,7 @@ body{
         top: 60%;
         left: 50%;
         transform: translate(-50%,-50%);
+        color: rgb(70, 69, 69);
     }
     ul{
         list-style: none;
@@ -79,6 +82,7 @@ body{
         line-height: 20px;
         font-size: 30px;
         transition: .3s linear;
+        color: rgb(70, 69, 69);
     }
     li:nth-child(1){
         right: 26%;
@@ -150,10 +154,10 @@ body{
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        width: 18px;
-        height: 18px;
+        width: 12px;
+        height: 12px;
         border-radius: 50%;
-        background-color: rgb(38, 43, 48);
+        background-color: rgb(70, 69, 69);
         z-index: 4;
     }
     .second{
@@ -173,7 +177,7 @@ body{
         position: absolute;
         top: 20%;
         left: 50%;
-        background-color:rgb(62, 67, 71);
+        background-color:rgb(70, 69, 69);
         width: 3px;
         height: 30%;
         transform-origin: 50% 100%;
