--- a/scss/style.css
+++ b/scss/style.css
@@ -17,6 +17,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-family: 'Lato', sans-serif;
+  background-color: #f7f9f9;
 }
 
 .clockContainer {
