--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Lato', sans-serif;
-    // background-color: rgb(33, 33, 33);
+    background-color: rgb(247, 249, 249);
 }
 .clockContainer{
     position: relative;
