design change, add mobile media

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,7 +137,7 @@ body {
         top: 5%;
     }
 
-    .circle {
+    .middle-circle {
         position: absolute;
         top: 50%;
         left: 50%;
