--- a/scss/style.css
+++ b/scss/style.css
@@ -17,26 +17,22 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-family: 'Lato', sans-serif;
-  background-color: #f7f9f9;
 }
 
 .clockContainer {
   position: relative;
-  max-width: 350px;
+  max-width: 325px;
   width: 100%;
-  max-height: 350px;
-  height: 100%;
+  height: 325px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-@media (max-width: 415px) {
+@media (max-width: 320px) {
   .clockContainer {
-    max-width: 40vh;
-    width: 100%;
-    max-height: 40vh;
-    height: 100%;
+    width: 250px;
+    height: 250px;
   }
 }
 
@@ -49,46 +45,19 @@ body {
   border-radius: 50%;
   -webkit-box-shadow: inset 2px 3px 8px 2px rgba(0, 0, 0, 0.3);
           box-shadow: inset 2px 3px 8px 2px rgba(0, 0, 0, 0.3);
-  background: white;
-  width: 375px;
-  height: 375px;
+  background: #f4f4f4;
+  width: calc(100% + 25px);
+  height: calc(100% + 25px);
   z-index: -99999;
-}
-
-@media (max-width: 415px) {
-  .underClock {
-    max-width: 42vh;
-    max-height: 42vh;
-  }
 }
 
 .clock {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: relative;
-  -webkit-box-shadow: inset 20px 50px 100px rgba(0, 0, 0, 0.2), inset 5px 10px 60px rgba(0, 0, 0, 0.5);
-          box-shadow: inset 20px 50px 100px rgba(0, 0, 0, 0.2), inset 5px 10px 60px rgba(0, 0, 0, 0.5);
-}
-
-.clock .digitalFrame {
-  position: absolute;
-  top: 50%;
-  left: 20%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  border: 1px solid #262b30;
-  -webkit-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2), inset 1px 1px 6px rgba(0, 0, 0, 0.5);
-          box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2), inset 1px 1px 6px rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-}
-
-.clock .digitalFrame .digital {
-  font-size: 19px;
-  color: #464545;
 }
 
 .clock .logo {
@@ -97,7 +66,14 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  color: #464545;
+  color: gray;
+  font-size: 16px;
+}
+
+@media (max-width: 320px) {
+  .clock .logo {
+    font-size: 11px;
+  }
 }
 
 .clock ul {
@@ -110,9 +86,13 @@ body {
   text-align: center;
   line-height: 20px;
   font-size: 30px;
-  -webkit-transition: .3s linear;
-  transition: .3s linear;
-  color: #464545;
+  color: gray;
+}
+
+@media (max-width: 320px) {
+  .clock li {
+    font-size: 20px;
+  }
 }
 
 .clock li:nth-child(1) {
@@ -183,32 +163,18 @@ body {
   top: 5%;
 }
 
-.clock .onRed {
-  color: red;
-  font-size: 40px;
-}
-
-.clock .onBlack {
-  color: black;
-  font-size: 40px;
-}
-
-.clock img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-
-.clock .circle {
+.clock .middle-circle {
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
-  background-color: #464545;
+  background-color: gray;
+  -webkit-box-shadow: inset 1px 1px 1px rgba(128, 128, 128, 0.2), inset 1px 1px 6px rgba(128, 128, 128, 0.5);
+          box-shadow: inset 1px 1px 1px rgba(128, 128, 128, 0.2), inset 1px 1px 6px rgba(128, 128, 128, 0.5);
   z-index: 4;
 }
 
@@ -216,7 +182,7 @@ body {
   position: absolute;
   top: 15%;
   left: 50%;
-  background-color: red;
+  background-color: #fe1e1e;
   width: 3px;
   height: 35%;
   -webkit-transform-origin: 50% 100%;
@@ -227,13 +193,15 @@ body {
   -webkit-transition: 0.2s cubic-bezier(0.4, 2.08, 0.55, 0.44);
   transition: 0.2s cubic-bezier(0.4, 2.08, 0.55, 0.44);
   z-index: 3;
+  -webkit-box-shadow: 0px 0px 46px -23px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 46px -23px rgba(0, 0, 0, 0.75);
 }
 
 .clock .minute {
   position: absolute;
   top: 20%;
   left: 50%;
-  background-color: #464545;
+  background-color: gray;
   width: 3px;
   height: 30%;
   -webkit-transform-origin: 50% 100%;
@@ -244,13 +212,15 @@ body {
   transition: 0.2s cubic-bezier(0.4, 2.08, 0.55, 0.44);
   border-radius: 30% 30% 0 0;
   z-index: 1;
+  -webkit-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
 }
 
 .clock .hour {
   position: absolute;
   top: 25%;
   left: 50%;
-  background-color: #3e4347;
+  background-color: gray;
   width: 3px;
   height: 25%;
   -webkit-transform-origin: 50% 100%;
@@ -261,5 +231,41 @@ body {
   -webkit-transition: 0.2s cubic-bezier(0.4, 2.08, 0.55, 0.44);
   transition: 0.2s cubic-bezier(0.4, 2.08, 0.55, 0.44);
   z-index: 2;
+  -webkit-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
+}
+
+.digital-time-box {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border: 1px solid gray;
+  border-radius: 7px;
+  -webkit-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2), inset 1px 1px 6px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2), inset 1px 1px 6px rgba(0, 0, 0, 0.5);
+}
+
+.digital-time-box .digital-hour-min {
+  font-size: 19px;
+  color: gray;
+}
+
+@media (max-width: 320px) {
+  .digital-time-box .digital-hour-min {
+    font-size: 13px;
+  }
+}
+
+.digital-time-box .digital-seconds {
+  color: #fe1e1e;
+  font-size: 15px;
+}
+
+@media (max-width: 320px) {
+  .digital-time-box .digital-seconds {
+    font-size: 9px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
