--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,7 +178,8 @@ body {
         height: 30%;
         transform-origin: 50% 100%;
         transform: rotate(0deg);
-        transition: 0.2s cubic-bezier(.4, 2.08, .55, .44);
+        // transition: 0.2s cubic-bezier(.4, 2.08, .55, .44);
+        // transition: .1s linear ;
         border-radius: 30% 30% 0 0;
         z-index: 1;
         -webkit-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.75);
